src/snapshots/kk__tests__compiler__typecheck__explicit_type_variable_3.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Tuple<Left,Right> = {left: Left, right: Right}

type Foo = Tuple<Left = number, Left = string>

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/explicit_type_variable_3.kk:3:33
  │
3 │ type Foo = Tuple<Left = number, Left = string>
  │                                 ^^^^ Type argument name mismatch
  │
  = The expected name here is `Right`.
