src/snapshots/kk__tests__compiler__typecheck__explicit_type_variable_6.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let as<Type> = \(x: Type): Type => x

let foo = "123".as<Type= string>()

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
