src/snapshots/kk__tests__compiler__typecheck__function_arguments_mismatch.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f =
    \(x: number) => x
    \(_, _) => 1

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/function_arguments_mismatch.kk:3:5
  │
3 │     \(_, _) => 1
  │     ^^^^^^^^^^^^ Function arguments length mismatch
  │
  = Expected 1 argument, but this function has 2 arguments
