src/snapshots/kk__tests__compiler__typecheck__function_generalization_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let identity = \x => x
let x = 'hello'.identity()
let y: number = x

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/function_generalization_1.kk:3:17
  │
3 │ let y: number = x
  │                 ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - number      | + string    |
    +---------------+-------------+
