src/snapshots/kk__tests__compiler__typecheck__monadic_let_record_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f = \x =>
  let {a} = x
  a

let result: string = {a = 2}.f()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_record_1.kk:5:22
  │
5 │ let result: string = {a = 2}.f()
  │                      ^^^^^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - string      | + number    |
    +---------------+-------------+
