src/snapshots/kk__tests__compiler__typecheck__monadic_let_string_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let guess = \x =>
  let 'hey' = x
  2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/monadic_let_string_1.kk:3:3
  │
3 │   2
  │   ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - string      | + number    |
    +---------------+-------------+
